qnode41_prod_arch_env/qpostgres/templates/03-qnode01-postgress-services.yml
apiVersion: v1
kind: Service
metadata:
  name: smartquaildb
  namespace: postgres
  labels:
    app: smartquaildb
spec:
  type: NodePort
  selector:
    app: smartquaildb  
  ports:
  - port: 5432
    protocol: TCP
