qnode41_prod_arch_env/qpostgres/templates/pgadmin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-app-ingress
  namespace: postgres
spec:
  # ingressClassName: nginx # use only with k8s version >= 1.18.0
  tls:
  rules:
  - host: dev.smartquail.io
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: pgadmin-service
            port:
              number: 80
